syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.demo.service";
option java_outer_classname = "UsuarioProto";

package usuario;

message Usuario {
    int64 id = 1;
    string nombreUsuario = 2;
    string contrasena = 3;
    string tienda_id = 4;
    string nombre = 5;
    string apellido = 6;
    bool habilitado = 7;
}

message UsuarioList {
    repeated Usuario usuarios = 1;
}

message ListUsuariosRequest {
    bool solo_habilitados = 1;
}

message LoginRequest {
    string nombreUsuario = 1;
    string contrasena = 2;
}

message LoginResponse {
    bool success = 1;
}

service UsuarioService {
    rpc CreateUsuario(Usuario) returns (Usuario);
    rpc GetUsuario(Usuario) returns (Usuario);
    rpc UpdateUsuario(Usuario) returns (Usuario);
    rpc DeleteUsuario(Usuario) returns (Usuario);
    rpc ListUsuarios(ListUsuariosRequest) returns (UsuarioList);
    rpc Login(LoginRequest) returns (LoginResponse);
}
